# AstrBot

./: .gitignore  README.md  README_fr.md  README_ja.md  README_ru.md  README_zh-TW.md  README_zh.md  main.py  pyproject.toml  runtime_bootstrap.py
.github/workflows/: build-docs.yml  dashboard_ci.yml  desktop_release.yml  release.yml
astrbot/builtin_stars/astrbot/: main.py  metadata.yaml
astrbot/builtin_stars/builtin_commands/: metadata.yaml
astrbot/core/: astr_agent_run_util.py  astr_main_agent.py  astr_main_agent_resources.py  core_lifecycle.py  persona_mgr.py  updator.py  zip_updator.py
astrbot/core/agent/: message.py  tool_image_cache.py
astrbot/core/backup/: importer.py
astrbot/core/computer/: computer_client.py
astrbot/core/computer/booters/: base.py  (+4 more)
astrbot/core/config/: astrbot_config.py  default.py
astrbot/core/cron/: manager.py
astrbot/core/knowledge_base/: kb_mgr.py
astrbot/core/platform/: astr_message_event.py  manager.py  platform.py  register.py
astrbot/core/provider/: entities.py  func_tool_manager.py  manager.py  reachability.py  register.py
astrbot/core/skills/: skill_manager.py
astrbot/core/star/: context.py  star.py  star_manager.py  star_tools.py  updator.py
astrbot/core/tools/: message_tools.py
astrbot/core/utils/: core_constraints.py  desktop_core_lock.py  io.py  metrics.py  network_utils.py  pip_installer.py
astrbot/dashboard/: plugin_page_auth.py  plugin_page_bridge.js  server.py
astrbot/dashboard/routes/: auth.py  chat.py  config.py  live_chat.py  persona.py  plugin.py  skills.py
changelogs/: v4.24.2.md
dashboard/: vite.config.ts
dashboard/src/: main.ts
dashboard/src/composables/: useConfigTextResolver.js  useProviderModelConfigDialog.ts  useProviderSources.ts
dashboard/src/router/: MainRoutes.ts  routeConstants.mjs
dashboard/src/stores/: auth.ts  common.js
dashboard/src/styles/: dashboard-shell.css
dashboard/src/utils/: pluginI18n.js  pluginSearch.js  shiki.js  shikiLimitedBundle.js  streamMonacoDisabled.js
dashboard/src/views/: ConsolePage.vue  ConversationPage.vue  CronJobPage.vue  ExtensionPage.vue  PersonaPage.vue  PlatformPage.vue  PluginPagePage.vue  ProviderPage.vue  SubAgentPage.vue  TracePage.vue
dashboard/tests/: extensionPreferenceStorage.test.mjs
docs/.vitepress/: config.mjs
docs/en/providers/: start.md
docs/en/use/: computer.md  knowledge-base.md  websearch.md
docs/public/: install.ps1  install.sh
docs/zh/platform/: discord.md  lark.md  wecom.md
docs/zh/providers/: siliconflow.md  start.md
docs/zh/use/: computer.md  knowledge-base.md  unified-webhook.md  websearch.md
tests/: test_anthropic_kimi_code_provider.py  test_computer_fs_tools.py  test_computer_skill_sync.py  test_conversation_checkpoint.py  test_dashboard.py  test_main.py  test_openai_source.py  test_pip_installer.py  test_plugin_manager.py  test_shipyard_neo_booter.py  test_skill_metadata_enrichment.py  test_tool_loop_agent_runner.py  test_updator_socks.py
tests/fixtures/: helpers.py
tests/unit/: test_astr_main_agent.py  test_config.py  test_core_lifecycle.py  test_func_tool_manager.py  test_gemini_source.py  test_internal_agent_sub_stage.py  test_message_tools.py  test_updator.py
(+78 files in other folders)
